# argus

./: .env.example  .env.production  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: ci.yml  pr-checks.yml  publish.yml  release-images.yml  sonarqube.yml
backend/: .coveragerc  Dockerfile  alembic.ini  coverage.xml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: alerting.py  audit.py  backups.py  bootstrap.py  exporters.py  findings.py  integrations.py  main.py  notifications.py
backend/scripts/: migrate.py
backend/tests/: conftest.py  test_ai_control_plane_units.py  test_asset_ai_analysis.py  test_asset_heartbeat.py  test_asset_scan_profiles.py  test_discovery_ping_xml.py  test_fingerprint_datasets.py  test_fingerprint_llm.py  test_fingerprinting_evidence.py  test_health.py  test_identity_resolver.py  test_instant_win_fingerprints.py  test_security.py  (+24 more)
docs/: DEPENDENCY_UPGRADE_PLAN.md  FINGERPRINTING_ENGINE_PLAN.md  PLANNING.md  SCAN_SPEED_PLAN.md  architecture.md  getting-started.md  intro.md  modernization-backlog.md  troubleshooting.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
plugins/example_argus_plugin/: pyproject.toml
plugins/example_argus_plugin/example_argus_plugin/: __init__.py
scanner/: Dockerfile
scripts/: setup.sh
services/: README.md
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+180 files in other folders)
